# isaac_sim_mcp

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
claude/: settings.local.json
claude/agents/: isaac-sim-engineer.md  robotics-devops-engineer.md  ros2-isaac-sim-expert.md  urdf-robot-modeler.md
claude/hooks/: type_check.py
isaac.sim.mcp_extension/isaac_sim_mcp_extension/: extension.py  gen3d.py  usd.py
isaac_mcp/: __init__.py  server.py
